--- a/package.json
+++ b/package.json
@@ -25,12 +25,14 @@
     "chai": "^3.5.0",
     "chalk": "^2.0.1",
     "chromedriver": "^2.27.2",
+    "codemirror": "^5.36.0",
     "connect-history-api-fallback": "^1.3.0",
     "copy-webpack-plugin": "^4.0.1",
     "cross-env": "^5.0.1",
     "cross-spawn": "^5.0.1",
     "css-loader": "^0.28.0",
     "cssnano": "^3.10.0",
+    "debounce": "^1.1.0",
     "eslint": "^3.19.0",
     "eslint-config-standard": "^6.2.1",
     "eslint-friendly-formatter": "^3.0.0",
@@ -60,6 +62,7 @@
     "karma-sourcemap-loader": "^0.3.7",
     "karma-spec-reporter": "0.0.31",
     "karma-webpack": "^2.0.2",
+    "lodash": "^4.17.5",
     "lolex": "^1.5.2",
     "mocha": "^3.2.0",
     "nightwatch": "^0.9.12",
@@ -75,10 +78,13 @@
     "sinon-chai": "^2.8.0",
     "url-loader": "^0.5.8",
     "vue": "^2.3.3",
+    "vue-ace-editor": "^1.0.3",
+    "vue-codemirror": "^4.0.4",
     "vue-loader": "^12.1.0",
     "vue-router": "^2.6.0",
     "vue-style-loader": "^3.0.1",
     "vue-template-compiler": "^2.3.3",
+    "vue2-ace-code-editor": "0.0.5",
     "vuex": "^3.0.1",
     "vuex-persistedstate": "^2.4.2",
     "webpack": "^2.6.1",
